Bug 291653 - Cannot edit identity on local-xmpp account.
Summary: Cannot edit identity on local-xmpp account.
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: accounts-kcm (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-16 12:35 UTC by David Edmundson
Modified: 2013-01-20 17:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2012-01-16 12:35:39 UTC
Cannot edit identity on local-xmpp account button is always disabled as it checks to see if an account is selected in the main view.
Comment 1 Martin Klapetek 2012-01-16 12:55:55 UTC
For salut you actually set the identity (names and user name) in account settings, ie. "Edit Account". But I'm unsure how to fit these two together (edit account & edit identity).
Comment 2 Daniel Vrátil 2013-01-20 17:13:18 UTC
Git commit d3784b941d385911f0bce474d56a033b49a52da3 by Dan Vrátil.
Committed on 20/01/2013 at 18:07.
Pushed by dvratil into branch 'kde-telepathy-0.5'.

Fix 'Edit Identity' button

REVIEW: 108502
FIXED-IN: 0.5.3

M  +27   -13   src/kcm-telepathy-accounts.cpp
M  +1    -1    src/kcm-telepathy-accounts.h

http://commits.kde.org/telepathy-accounts-kcm/d3784b941d385911f0bce474d56a033b49a52da3