Fix 'Edit Identity' button

REVIEW: 108502
BUG: 291653
FIXED-IN: 0.5.3